--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -11,6 +11,15 @@ body {
 
 }
 
+.wrapper02 {
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(135deg blue green 100%);
+
+}
+
 .wrapper a {
     display: inline-block;
     text-decoration: none;
